# cgm-scanner

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  build.gradle  config.cmake  gradle.properties  settings.gradle
CMake/: install_config.cmake
app/: appcenter-post-clone.sh  build.gradle  google-services.json
app/arcore/release/: output.json
app/schemas/de.welthungerhilfe.cgm.scanner.datasource.database.CgmDatabase/: 2.json  3.json  4.json  5.json  6.json  7.json
app/schemas/de.welthungerhilfe.cgm.scanner.helper.OfflineDatabase/: 4.json
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: acfa_boys_p_exp.txt  acfa_girls_p_exp.txt  hcfa_boys_p_exp.txt  hcfa_girls_p_exp.txt  lhfa_boys_0_5_zscores.json  lhfa_boys_p_exp.txt  lhfa_girls_0_5_zscores.json  lhfa_girls_p_exp.txt  wfa_boys_0_5_zscores.json  wfa_boys_p_exp.txt  wfa_girls_0_5_zscores.json  wfa_girls_p_exp.txt  wfh_boys_0_5_zscores.json  wfh_boys_p_exp.txt  wfh_girls_0_5_zscores.json  (+3 more)
app/src/release/: google-services.json
build-arm64-v8a/: cmake_install.cmake  cmake_uninstall.cmake  realsense2ConfigVersion.cmake  udev-rules.h
build-x86_64/: cmake_install.cmake  cmake_uninstall.cmake  realsense2Config.cmake  udev-rules.h
build-x86_64/config/: realsense2.pc
doc/: install_play_store.md
gradle/wrapper/: gradle-wrapper.properties
librealsense/: CMakeLists.txt  build.gradle
librealsense/build-arm64-v8a/: cmake_install.cmake
librealsense/src/main/java/com/intel/realsense/librealsense/: Intrinsic.java
src/linux/: find_udev.cmake
(+571 files in other folders)
